# OpenFEC

./: .gitignore  CHANGELOG  CMakeLists.txt  README  openfec-1.3-CHANGELOG.txt  squelette_source.txt
applis/eperftool/: CMakeLists.txt  blocking_struct.c  blocking_struct.h  callbacks.c  callbacks.h  codec_instance_mgmt.c  codec_instance_mgmt.h  command_line.c  defaults.h  eperftool.c  eperftool.h  globals.c  globals.h  receiver.c  sender.c  tx_simulator.c
applis/howto_examples/simple_client_server/: CMakeLists.txt  README.TXT  simple_client.c  simple_client_server.h  simple_server.c
perf_eval/: Fraction.pm  descr_stats  eperftool_trace.txt  generate_curves.pl  openfec_test2.pl  params.txt  params_c6.txt  params_c7.txt
src/: CMakeLists.txt
src/lib_advanced/ldpc_from_file/: of_codec_profile.h  of_ldpc_ff.h  of_ldpc_ff_api.c  of_ldpc_ff_api.h  of_ldpc_ff_includes.h  of_ldpc_includes.h
src/lib_common/: of_mem.c  of_mem.h  of_openfec_api.c  of_openfec_api.h  of_openfec_profile.h  of_rand.c  of_rand.h
src/lib_common/linear_binary_codes_utils/: of_create_pchk.c  of_create_pchk.h  of_linear_binary_code.h  of_symbol.c  of_symbol.h
src/lib_common/linear_binary_codes_utils/binary_matrix/: of_binary_matrix.h  of_hamming_weight.c  of_hamming_weight.h  of_matrix_convert.c  of_matrix_convert.h  of_matrix_dense.c  of_matrix_dense.h  of_matrix_sparse.c  of_matrix_sparse.h  of_tools.c  of_tools.h
src/lib_common/linear_binary_codes_utils/it_decoding/: of_it_decoding.c  of_it_decoding.h
src/lib_common/linear_binary_codes_utils/ml_decoding/: of_ml_decoding.c  of_ml_decoding.h  of_ml_tool.c  of_ml_tool.h  of_ml_tool_2.c  of_ml_tool_2.h
src/lib_common/statistics/: of_hash_table.c  of_hash_table.h  of_linked_list.c  of_linked_list.h  of_queue.c  of_queue.h  of_statistics.c  of_statistics.h  of_symbols_stats.c  of_symbols_stats.h
src/lib_stable/2d_parity_matrix/: of_2d_parity.h  of_2d_parity_api.c  of_2d_parity_api.h  of_2d_parity_includes.h  of_codec_profile.h
src/lib_stable/ldpc_staircase/: of_codec_profile.h  of_ldpc_includes.h  of_ldpc_staircase.h  of_ldpc_staircase_api.c  of_ldpc_staircase_api.h  of_ldpc_staircase_pchk.c
src/lib_stable/reed-solomon_gf_2_8/: of_codec_profile.h  of_reed-solomon_gf_2_8.c  of_reed-solomon_gf_2_8.h  of_reed-solomon_gf_2_8_api.c  of_reed-solomon_gf_2_8_api.h  of_reed-solomon_gf_2_8_includes.h
src/lib_stable/reed-solomon_gf_2_m/: of_codec_profile.h  of_reed-solomon_gf_2_m.h  of_reed-solomon_gf_2_m_api.c  of_reed-solomon_gf_2_m_api.h  of_reed-solomon_gf_2_m_includes.h
src/lib_stable/reed-solomon_gf_2_m/galois_field_codes_utils/: algebra_2_4.c  algebra_2_4.h  algebra_2_8.c  algebra_2_8.h  of_galois_field_code.c  of_galois_field_code.h
tests/: CMakeLists.txt  callback_test.c  code_params_test.c  create_instance_test.c  encoder_fuzz.c  encoder_instance_test.c
tests/afl-fuzz/encoder_input/: id:000001,orig:random  id:000002,src:000000,op:flip1,pos:7,+cov  id:000003,src:000000,op:flip1,pos:11,+cov  id:000004,src:000000,op:flip1,pos:20,+cov  id:000005,src:000000,op:flip2,pos:3,+cov  id:000007,src:000000,op:havoc,rep:64  id:000008,src:000000,op:havoc,rep:8  id:000009,src:000000,op:havoc,rep:16  id:000010,src:000000,op:havoc,rep:16,+cov  id:000011,src:000000,op:havoc,rep:4  id:000012,src:000000,op:havoc,rep:4,+cov  id:000014,src:000000,op:havoc,rep:4,+cov  id:000015,src:000000,op:havoc,rep:8,+cov  id:000019,src:000000,op:havoc,rep:8,+cov  id:000027,src:000000,op:havoc,rep:4,+cov  id:000029,src:000000,op:havoc,rep:4,+cov  id:000040,src:000000,op:havoc,rep:2  id:000043,src:000000,op:havoc,rep:4,+cov  id:000045,src:000000,op:havoc,rep:4,+cov  id:000046,src:000000,op:havoc,rep:8,+cov  id:000050,src:000000,op:havoc,rep:4,+cov  id:000052,src:000000,op:havoc,rep:8  id:000054,src:000000,op:havoc,rep:8  id:000056,src:000004,op:flip2,pos:8  id:000061,src:000004,op:havoc,rep:8  id:000066,src:000004,op:havoc,rep:4,+cov  id:000067,src:000004,op:havoc,rep:4,+cov  id:000070,src:000004,op:havoc,rep:8  id:000072,src:000004,op:havoc,rep:2  id:000076,src:000004,op:havoc,rep:4,+cov  id:000079,src:000004,op:havoc,rep:8,+cov  id:000081,src:000004,op:havoc,rep:4  id:000087,src:000004,op:havoc,rep:4,+cov  id:000091,src:000004,op:havoc,rep:8  id:000092,src:000004,op:havoc,rep:4  id:000097,src:000004,op:havoc,rep:4,+cov  id:000098,src:000004,op:havoc,rep:2  id:000099,src:000004,op:havoc,rep:4  id:000111,src:000004,op:havoc,rep:4  id:000113,src:000004,op:havoc,rep:4,+cov  (+266 more)
tools/descr_stats_v1.2/: CMakeLists.txt
