add_executable(test_create_instance create_instance_test.c)
target_link_libraries(test_create_instance openfec m)
add_test("create_instance" ${EXECUTABLE_OUTPUT_PATH}/test_create_instance)

add_executable(test_encoder_instance encoder_instance_test.c)
target_link_libraries(test_encoder_instance openfec m)
add_test("encoder_instance" ${EXECUTABLE_OUTPUT_PATH}/test_encoder_instance)

add_executable(test_callback callback_test.c)
target_link_libraries(test_callback openfec m)
add_test("callback" ${EXECUTABLE_OUTPUT_PATH}/test_callback)

add_executable(test_code_params code_params_test.c)
target_link_libraries(test_code_params openfec m)
add_test("code_params" ${EXECUTABLE_OUTPUT_PATH}/test_code_params)

macro (do_test name result)
  IF (${ARGC} GREATER 2)
        add_test(Test.${name} ${EPERFTOOL_BIN} ${ARGN})
  ELSE (${ARGC} GREATER 2)
       add_test(Test.${name} ${EPERFTOOL_BIN} )
  ENDIF (${ARGC} GREATER 2)
        set_tests_properties (Test.${name}
                PROPERTIES FAIL_REGULAR_EXPRESSION ${result})
endmacro(do_test)

do_test("LDPC-SC.cr2.3.tx0" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500")
do_test("LDPC-SC.cr1.2.tx1" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=1000" "-tx_type=1")
do_test("LDPC-SC.cr1.2.tx2" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=1000" "-tx_type=2")
do_test("LDPC-SC.cr1.2.tx3" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=1090" "-tx_type=3")
do_test("LDPC-SC.cr2.3.tx4" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-tx_type=4")
do_test("LDPC-SC.cr2.3.tx5" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-tx_type=5")
do_test("LDPC-SC.cr2.3.tx6" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-tx_type=6")
do_test("LDPC-SC.cr2.3.tx7" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-tx_type=7")
do_test("LDPC-SC.cr2.3.loss1" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-loss=2:30")
do_test("LDPC-SC.cr2.3.loss2" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-loss=3:480")
do_test("LDPC-SC.cr2.3.loss3" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=500" "-loss=1")
do_test("LDPC-SC.cr1.2.loss4" "ERROR" "-codec=3" "-tot_src=1000" "-tot_rep=1000" "-loss=4")
do_test("LDPC-SC.cr2.3.big" "ERROR" "-codec=3" "-tot_src=10000" "-tot_rep=5000")
do_test("LDPC-SC.cr3.4.tx4" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-tx_type=4")
do_test("LDPC-SC.cr3.4.tx5" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-tx_type=5")
do_test("LDPC-SC.cr3.4.tx6" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-tx_type=6")
do_test("LDPC-SC.cr3.4.tx7" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-tx_type=7")
do_test("LDPC-SC.cr3.4.loss1" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-loss=2:24")
do_test("LDPC-SC.cr3.4.loss2" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-loss=3:480")
do_test("LDPC-SC.cr3.4.loss3" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=500" "-loss=1")
do_test("LDPC-SC.cr3.4.loss4" "ERROR" "-codec=3" "-tot_src=1500" "-tot_rep=1000" "-loss=4")
do_test("LDPC-SC.cr3.4.big" "ERROR" "-codec=3" "-tot_src=15000" "-tot_rep=5000")

do_test("LDPC-SC.src1" "ERROR" "-codec=3" "-tot_src=1" "-tot_rep=23")
do_test("LDPC-SC.src2" "ERROR" "-codec=3" "-tot_src=2" "-tot_rep=23")
do_test("LDPC-SC.src3" "ERROR" "-codec=3" "-tot_src=3" "-tot_rep=23")
do_test("LDPC-SC.src4" "ERROR" "-codec=3" "-tot_src=4" "-tot_rep=23")
do_test("LDPC-SC.src11" "ERROR" "-codec=3" "-tot_src=11" "-tot_rep=23")
do_test("LDPC-SC.src13" "ERROR" "-codec=3" "-tot_src=13" "-tot_rep=23")
do_test("LDPC-SC.src15" "ERROR" "-codec=3" "-tot_src=15" "-tot_rep=23")
do_test("LDPC-SC.src17" "ERROR" "-codec=3" "-tot_src=17" "-tot_rep=23")
do_test("LDPC-SC.src21" "ERROR" "-codec=3" "-tot_src=21" "-tot_rep=23")

do_test("LDPC-SC.ss1" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=1")
do_test("LDPC-SC.ss2" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=2")
do_test("LDPC-SC.ss3" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=3")
do_test("LDPC-SC.ss4" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=4")
do_test("LDPC-SC.ss5" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=5")
do_test("LDPC-SC.ss6" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=6")
do_test("LDPC-SC.ss7" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=7")
do_test("LDPC-SC.ss8" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=8")
do_test("LDPC-SC.ss9" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=9")
do_test("LDPC-SC.ss10" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=10")
do_test("LDPC-SC.ss11" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=11")
do_test("LDPC-SC.ss12" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=12")
do_test("LDPC-SC.ss13" "ERROR" "-codec=3" "-tot_src=100" "-tot_rep=100 -symb_sz=13")


do_test("RS.src1" "ERROR" "-codec=1" "-tot_src=1" "-tot_rep=23")
do_test("RS.src2" "ERROR" "-codec=1" "-tot_src=2" "-tot_rep=23")
do_test("RS.src3" "ERROR" "-codec=1" "-tot_src=3" "-tot_rep=23")
do_test("RS.src4" "ERROR" "-codec=1" "-tot_src=4" "-tot_rep=23")
do_test("RS.src11" "ERROR" "-codec=1" "-tot_src=11" "-tot_rep=23")
do_test("RS.src13" "ERROR" "-codec=1" "-tot_src=13" "-tot_rep=23")
do_test("RS.src15" "ERROR" "-codec=1" "-tot_src=15" "-tot_rep=23")
do_test("RS.src17" "ERROR" "-codec=1" "-tot_src=17" "-tot_rep=23")
do_test("RS.src21" "ERROR" "-codec=1" "-tot_src=21" "-tot_rep=23")

do_test("RS.cr2.3.tx0" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500")
do_test("RS.cr1.2.tx1" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=1000" "-tx_type=1")
do_test("RS.cr1.2.tx2" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=1000" "-tx_type=2")
do_test("RS.cr1.2.tx3" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=1090" "-tx_type=3")
do_test("RS.cr2.3.tx4" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-tx_type=4")
do_test("RS.cr2.3.tx5" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-tx_type=5")
do_test("RS.cr2.3.tx6" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-tx_type=6")
do_test("RS.cr2.3.tx7" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-tx_type=7")
do_test("RS.cr2.3.loss1" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-loss=2:20")
do_test("RS.cr2.3.loss2" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-loss=3:400")
do_test("RS.cr2.3.loss3" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=500" "-loss=1")
do_test("RS.cr1.2.loss4" "ERROR" "-codec=1" "-tot_src=1000" "-tot_rep=1000" "-loss=4")
do_test("RS.cr2.3.big" "ERROR" "-codec=1" "-tot_src=10000" "-tot_rep=5000")
do_test("RS.cr3.4.tx4" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-tx_type=4")
do_test("RS.cr3.4.tx5" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-tx_type=5")
do_test("RS.cr3.4.tx6" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-tx_type=6")
do_test("RS.cr3.4.tx7" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-tx_type=7")
do_test("RS.cr3.4.loss1" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-loss=2:20")
do_test("RS.cr3.4.loss2" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-loss=3:380")
do_test("RS.cr3.4.loss3" "ERROR" "-codec=1" "-tot_src=1500" "-tot_rep=500" "-loss=1")
do_test("RS.cr3.4.big" "ERROR" "-codec=1" "-tot_src=15000" "-tot_rep=5000")

do_test("RS.ss1" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=1")
do_test("RS.ss2" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=2")
do_test("RS.ss3" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=3")
do_test("RS.ss4" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=4")
do_test("RS.ss5" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=5")
do_test("RS.ss6" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=6")
do_test("RS.ss7" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=7")
do_test("RS.ss8" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=8")
do_test("RS.ss9" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=9")
do_test("RS.ss10" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=10")
do_test("RS.ss11" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=11")
do_test("RS.ss12" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=12")
do_test("RS.ss13" "ERROR" "-codec=1" "-tot_src=100" "-tot_rep=100 -symb_sz=13")


